# C-CPP_Learn

./: .clang-format  .gitignore
GNU-Linux/: README.md
GNU-Linux/eight/: eight.c
GNU-Linux/nineteenth/: README.md  nineteenth  nineteenth.cpp
GNU-Linux/tenth/: README.md  tenth.cpp  tenth_a.c
GNU-Linux/twentyeighth/: twentyeighth  twentyeighth.cpp
GNU-Linux/twentysecond/: twentysecond  twentysecond.cpp
GNU-Linux/twentysixth/: README.md  twentysixth  twentysixth.cpp
GNU-Linux/twentythird/: twentythird  twentythird.cpp
GccCpp/: README.org  dynCaller.cpp  first.cpp  second.cpp  third.cpp
Linux-Server/: clock-speed.c
Polygolt/: DynClient.cpp  arithTest.h  testClient.cpp
brain-fuck/: README.md
brain-fuck-compiler/: README.md  bfCompiler.h  hello_world.bf  main.cpp
brain-fuck-compiler/BFInterpreter/: bfCompiler.h
brain-fuck-compiler/BFVm/: BFIncludes.hpp  Makefile  README.md  compiler.cpp  machine.cpp  main.cpp
brain-fuck-compiler/Interpreter/: bfCompiler.h  main.cpp
brain-fuck/BFInterpreter/: main.cpp
brain-fuck/BFVm/: BFIncludes.hpp  main.cpp
crtp/: README.md  main.cpp  mixin.cpp  static_interfaces.cpp
linux-server/: clock-speed.c  common.c  module.c  server.c  server.h
polygolt-programming/: TestCaller.cs  arithTest.cpp  arithTest.def  funcPointer.cpp
regex/: nfa.c
slang-llvm/: CMakeLists.txt  Makefile  README.md  main.cpp
slang-llvm/ast/: CMakeLists.txt  Expression.cpp  Expression.hpp  Visitor.cpp  Visitor.hpp  meta.hpp
slang-llvm/ast/expression/: CMakeLists.txt  Expression.cpp  Expression.hpp  NumericExpression.cpp  NumericExpression.h
slang-llvm/callSlang/: CMakeLists.txt  main.cpp
slang-llvm/contexts/: CMakeLists.txt  Context.hpp  RuntimeContext.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.hpp
slang-llvm/frontend/: CMakeLists.txt  Parser.cpp  Parser.hpp  parser.cpp  parser.hpp
slang-llvm/meta/: CMakeLists.txt  Meta.hpp
slang4Cpp/step-1/: ast.h  expressions.cpp  main.cpp
slang4Cpp/step-2/: expression.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
slang4Cpp/step-3/: ast.h  builder.cpp  builder.h  expression.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test
slang4Cpp/step-4/: CMakeLists.txt  README.md  SLANG.h  main.cpp
slang4Cpp/step-4/ast/: expression.cpp  statement.cpp
slang4Cpp/step-4/builder/: builder.cpp  builder.h
slang4Cpp/step-4/frontend/: lexer.cpp  parser.cpp  parser.h
slang4Cpp/step-4/slang/: main.cpp
slang4Cpp/step-4/slang/builder/: builder.cpp
slang4Cpp/step-4/slang/context/: SymbolTable.cpp
slang4Cpp/step-4/slang/expressions/: BinaryDiv.cpp  BinaryMinus.cpp  BinaryMul.cpp  BinaryPlus.cpp  BoolenConstant.cpp  Expression.cpp  NumericConstant.cpp  StringLiteral.cpp  UnaryMinus.cpp  UnaryPlus.cpp  Variable.cpp  expression.cpp  unaryMinus.cpp
slang4Cpp/step-4/slang/frontend/: expressionParser.cpp  lexer.cpp  parser.cpp  statementParser.cpp
slang4Cpp/step-4/slang/include/: ast.h  ast_expression.h  ast_expression.hpp  ast_statement.h  ast_statement.hpp  builder.h  common.h  common.hpp  context.hpp  lexer.h  parser.h
slang4Cpp/step-4/slang/statements/: AssignmentStatement.cpp  VariableDeclStatement.cpp  statement.cpp
slang4Cpp/step-4/slang_scripts/: First.sl
slang4Cpp/step-5/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  SlangConfig.h  main
slang4Cpp/step-5/slang/: SlangConfig.h
slang4Cpp/step-5/slang/builder/: builder.cpp
slang4Cpp/step-5/slang/context/: SymbolTable.cpp
slang4Cpp/step-5/slang/expressions/: BinaryMinus.cpp  BinaryPlus.cpp  NumericConstant.cpp  UnaryMinus.cpp
slang4Cpp/step-5/slang/frontend/: expressionParser.cpp  lexer.cpp  statementParser.cpp
slang4Cpp/step-5/slang/include/: SlangConfig.h  ast.h  ast_expression.h  ast_statement.h  builder.h  common.h  context.h  parser.h
slang4Cpp/step-5/slang/statements/: AssignmentStatement.cpp  statement.cpp
slang4Cpp/step-5/slang_scripts/: First.sl
slangCpp/step-1/: main.cpp
smart-classes/: ConsoleApplication2.cpp  MVector.cpp  MVector.h  Precomplied.h  debugUtils.h  sample_mordern__ptr.cpp
socket-programming/: README.md  makefile  payload.cpp  payload.hpp  server.cpp  server.hpp  wire  wire.cpp
unix-process/: exec_fork.c  test.c
unix_process/: fork.c
